2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: added mountpointcolumn (#304688)
	* include/Win_GParted.h,
	  src/Win_GParted.cc: added submenu 'Devices' which allows one to
	  select devices from the menu (#329415)
	
2006-01-31 Bart Hakvoort <hakvoort@cvs.gnome.org>
	
	* confgure.in: added 'tr' to ALL_LINUGAS on request of the Turkish
	  coordinator (gorkem@gorkemcetin.com)

2006-01-30 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: fixed error with mountpoints containing
	  whitespaces. (#329247)

2006-01-30 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* configure.in: bump to gparted-0.2
	  ========================================================

2006-01-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/FileSystem.cc: sometimes certain commands couldn't be found
	  because PATH was overridden. fixed.

2006-01-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Utils.cc: fixed small bug in unmount()
	* src/jfs.cc,
	  src/xfs.cc: check if error actually contains data before adding it
	  to the feedbackdata. (this prevents empty rows in the operationtree)

2006-01-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc,
	  src/FileSystem.cc: added markup to operationdetails

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc,
	  src/Win_GParted.cc: deal correctly with the progressdialog's
	  delete_event.
	
2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Partition_Info.h,
	  include/Win_GParted.h,
	  src/Win_GParted.cc: cleanups

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h: added FIXME
	* src/Partition.cc: fixed Update_Number()

2006-01-26 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Dialog_Progress.h,
	  src/Dialog_Progress.cc,
	  src/Win_GParted.cc: made some changes to progressdialog behaviour.
	  