@@ -1,5 +1,13 @@
 2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* include/GParted_Core.h,
+	  include/Win_GParted.h,
+	  src/GParted_Core.cc,
+	  src/Win_GParted.cc,
+	  src/main.cc: added support for commandline arguments (#329414)
+
+2006-02-02 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/TreeView_Detail.h,
 	  src/TreeView_Detail.cc: added mountpointcolumn (#304688)
 	* include/Win_GParted.h,
